--- a/notebooks/create_htmls.ipynb
+++ b/notebooks/create_htmls.ipynb
@@ -17,7 +17,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 46,
+            "execution_count": 222,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -34,7 +34,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 223,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -63,7 +63,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 48,
+            "execution_count": 224,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -89,7 +89,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 49,
+            "execution_count": 225,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -122,7 +122,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 50,
+            "execution_count": 226,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -192,7 +192,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 51,
+            "execution_count": 227,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -209,7 +209,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 52,
+            "execution_count": 228,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -241,7 +241,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 53,
+            "execution_count": 229,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -284,7 +284,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 54,
+            "execution_count": 230,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -317,7 +317,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 55,
+            "execution_count": 231,
             "metadata": {},
             "outputs": [
                 {
@@ -343,7 +343,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 56,
+            "execution_count": 232,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -369,7 +369,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 57,
+            "execution_count": 233,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -396,7 +396,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 58,
+            "execution_count": 234,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -427,7 +427,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 59,
+            "execution_count": 235,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -454,7 +454,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 60,
+            "execution_count": 236,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -482,7 +482,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 61,
+            "execution_count": 237,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -495,7 +495,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 62,
+            "execution_count": 238,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -517,7 +517,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 63,
+            "execution_count": 239,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -533,7 +533,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 64,
+            "execution_count": 240,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -549,7 +549,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 65,
+            "execution_count": 241,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -572,7 +572,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 66,
+            "execution_count": 242,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -597,7 +597,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 67,
+            "execution_count": 243,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -620,7 +620,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 89,
+            "execution_count": 244,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -649,7 +649,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 69,
+            "execution_count": 245,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -679,7 +679,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 70,
+            "execution_count": 246,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -693,7 +693,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 71,
+            "execution_count": 247,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -702,7 +702,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 72,
+            "execution_count": 248,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -714,7 +714,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 73,
+            "execution_count": 249,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -736,7 +736,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 74,
+            "execution_count": 250,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -747,7 +747,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 75,
+            "execution_count": 251,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -766,7 +766,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 76,
+            "execution_count": 252,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -788,7 +788,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 77,
+            "execution_count": 253,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -798,7 +798,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 78,
+            "execution_count": 254,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -821,7 +821,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 79,
+            "execution_count": 255,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -833,7 +833,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 80,
+            "execution_count": 256,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -846,7 +846,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 81,
+            "execution_count": 257,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -869,7 +869,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 82,
+            "execution_count": 258,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -891,7 +891,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 83,
+            "execution_count": 259,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -906,7 +906,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 84,
+            "execution_count": 260,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -915,7 +915,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 85,
+            "execution_count": 261,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -926,7 +926,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 86,
+            "execution_count": 262,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -940,7 +940,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 87,
+            "execution_count": 263,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -963,7 +963,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 88,
+            "execution_count": 264,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -985,6 +985,32 @@
                 "        content=article_content_df.to_dict(\"index\"),\n",
                 "    )"
             ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# Streamlit app"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 265,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "create_page(\n",
+                "    \"streamlit.html.j2\",\n",
+                "    \"sub_research/streamlit.html\",\n",
+                ")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": []
         }
     ],
     "metadata": {
